--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,18 @@ html{
     font-size: 62.5%;
 }
 body{
-    text-align: center;
+    text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    color: deeppink;
+    color: #333;
+    font-size: 1.6rem;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid rebeccapurple;
+    margin: 0 auto;
+}
+#container h1{
+    font-size: 2rem;
 }
