--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ html{
 }
 body{
     text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
     color: #333;
     font-size: 1.6rem;
 }
@@ -21,4 +21,7 @@ body{
 }
 #container h1{
     font-size: 2rem;
+}
+p{
+    margin: 10px 0;
 }
