--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ html{
 }
 body{
     text-align: left;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     color: #333;
     font-size: 1.6rem;
 }
