--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ html{
     font-size: 62.5%;
 }
 body{
+    background: #1e1f24;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
@@ -25,7 +26,7 @@ body{
 }
 
 #cabecera{
-    background-color: #33a;
+    background-color: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0 , 0.5);
     color: white;
     font-weight: bold;
@@ -33,8 +34,17 @@ body{
     padding: 0.5em;
 }
 
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}
+
 .cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
+}
+#post{
+    background-color: white;
+    padding: 1em;
 }
