--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,13 @@ body{
     font-weight: normal;
     font-size: 0.8em;
 }
+#post{
+    padding: 1em;
+}
+
+#footer{
+    background-color: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
