--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body{
     background: #1e1f24;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    color: #333;
+    /* color: #333; */
     font-size: 1.6rem;
 }
 #container{
@@ -46,6 +46,7 @@ body{
 }
 #post{
     padding: 1em;
+    color: white;
 }
 
 #footer{
